--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 * {box-sizing:border-box}
 
 .topnav {
-    background-color: #ffffff;
+    background-color: hsl(0, 0%, 100%);
     overflow: hidden;
   }
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
@@ -12,14 +12,32 @@
     display: block;
     color: #000000;
     text-align: center;
-    padding: 20px 40px;
-    margin-left:5.5rem;
+    padding: 25px 25px;
     text-decoration: none;
-    font-size: 17px;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: 300;
     font-family: 'Roboto', sans-serif;
+    margin-left:5rem;
+    margin-top:2rem;
   }
   
+  @media screen and (max-width: 600px) {
+    .topnav a {
+        float: left;
+        display: block;
+        color: #000000;
+        text-align: center;
+        padding: 20px 25px;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: 300;
+        font-family: 'Roboto', sans-serif;
+        margin-left:5rem;
+        margin-top:-5rem;
+      }
+    }
+
+
   /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #bbbbbb;
@@ -28,8 +46,8 @@
   
   /* Add an active class to highlight the current page */
   .topnav a.active {
-    background-color: #6d6d6d;
-    color: white;
+    background-color: #e2e2e2;
+    color: rgb(0, 0, 0);
   }
   
   /* Hide the link that should open and close the topnav on small screens */
@@ -42,6 +60,7 @@
     .topnav a.icon {
       float: right;
       display: block;
+      margin-right:0.5rem;
     }
   }
   
@@ -51,21 +70,30 @@
     .topnav.responsive a.icon {
       position: absolute;
       right: 0;
-      top: 0;
+      top: 5px;
     }
     .topnav.responsive a {
-      float: none;
+      float: right;
       display: block;
-      text-align: left;
+      text-align: right;
+      margin-top:1rem;
+      
     }
   }
 
 
 .logo-position{
     float:left;
-    width:15rem;
+    width:18rem;
 }
+@media screen and (max-width: 600px) {
+    .logo-position{
+        width:18rem;
+    
+    }
+  }
 
+  
 /* -----------------------------------slide show ------------------------ */
 
 
