--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,26 @@
 /* Add a black background color to the top navigation */
-* {box-sizing:border-box}
-
+* {box-sizing:border-box;
+}
 .topnav {
-    background-color: hsl(0, 0%, 100%);
-    overflow: hidden;
+  background-color: hsl(0, 0%, 100%);
+  overflow: visible;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  z-index: 9;
+  
   }
+
+@media screen and (max-width:600px){
+  .topnav{
+    overflow: hidden;
+    background-color: hsl(0, 0%, 100%);
+    position: relative;
+
+    
+}
+}
+  
   @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
   /* Style the links inside the navigation bar */
   .topnav a {
@@ -14,11 +30,12 @@
     text-align: center;
     padding: 25px 25px;
     text-decoration: none;
-    font-size: 16px;
-    font-weight: 300;
+    font-size: 1rem;
+    font-weight: 600;
     font-family: 'Roboto', sans-serif;
     margin-left:5rem;
-    margin-top:2rem;
+    margin-top:1rem;
+   
   }
   
   @media screen and (max-width: 600px) {
@@ -34,13 +51,15 @@
         font-family: 'Roboto', sans-serif;
         margin-left:5rem;
         margin-top:-5rem;
+        
+        
       }
     }
-
+   
 
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: #bbbbbb;
+    background-color: #e2e2e2d8;
     color: black;
   }
   
@@ -50,9 +69,10 @@
     color: rgb(0, 0, 0);
   }
   
-  /* Hide the link that should open and close the topnav on small screens */
+  /* Hide the burger icon that should open and close the topnav on small screens */
   .topnav .icon {
     display: none;
+    
   }
 
   @media screen and (max-width: 600px) {
@@ -60,7 +80,9 @@
     .topnav a.icon {
       float: right;
       display: block;
-      margin-right:0.5rem;
+      margin-right:-0.1rem;
+      
+      
     }
   }
   
@@ -71,13 +93,15 @@
       position: absolute;
       right: 0;
       top: 5px;
+         
+      
     }
     .topnav.responsive a {
       float: right;
       display: block;
       text-align: right;
       margin-top:1rem;
-      
+     
     }
   }
 
@@ -92,6 +116,39 @@
     
     }
   }
+
+  /* .w3rcontainer{
+    border: 1px solid 
+ #cccfdb;
+    border-radius: 2px;
+ }  */
+ .hover-underline-animation {
+   display: inline-block;
+   position: relative;
+   color: 
+ #0087ca;
+ }
+ 
+ .hover-underline-animation:after {
+   content: '';
+   position: absolute;
+   width: 100%;
+   transform: scaleX(0);
+   height: 5px;
+   bottom: 0;
+   left: 0;
+   background-color: 
+ #ca003d;
+   transform-origin: bottom right;
+   transition: transform 0.25s ease-out;
+ }
+ 
+ .hover-underline-animation:hover:after {
+   transform: scaleX(1);
+   transform-origin: bottom left;
+ }
+
+
 
   
 /* -----------------------------------slide show ------------------------ */
@@ -166,3 +223,64 @@ img {vertical-align: middle;}
   height: 500px;
   object-fit:fill;
 }
+
+@media only screen and (max-width:600px) {
+    
+.slideshow-images{
+    width: 100%;
+    height: 200px;
+    object-fit:fill;
+    margin-top:1rem;
+  }
+}
+
+
+
+.article-1-light-shadow{
+  width:448px;
+  height:450px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:2.2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-1-light-shadow{
+    width:2rem;
+    height:2rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(250, 0, 0);
+    
+    margin-left:-2rem;
+  }
+  
+}
+
+.article-1-picture{
+  object-fit:fill;
+  width:28rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-1-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading{
+  margin-top:-10px;
+  margin-left:4.10rem;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading{
+    margin-top:10px;
+    margin-left:4.6rem;
+  }
+  
+  }
