--- a/styles.css
+++ b/styles.css
@@ -236,15 +236,16 @@ img {vertical-align: middle;}
 }
 
 
-
+/* ______________________________________article one___________________________ */
 .article-1-light-shadow{
-  width:448px;
+  width:400px;
   height:550px;
   color:#000000;
   position:relative;
   background-color:rgb(212, 211, 211);
   left:40px;
-  margin-left:2.2rem;
+  margin-left:-2.2rem;
+  border-radius: 5%;
 }
 
 @media screen and (max-width: 600px) {
@@ -256,13 +257,14 @@ img {vertical-align: middle;}
     background-color:rgb(141, 141, 141);
     border-radius: 3%;
     margin-left:-2rem;
+    margin-top:2rem;
   }
   
 }
 
 .article-1-picture{
   object-fit:fill;
-  width:28rem;
+  width:25rem;
 }
 
 @media screen and (max-width: 600px) {
@@ -274,7 +276,7 @@ img {vertical-align: middle;}
 }
 .article-heading{
   margin-top:-10px;
-  margin-left:4.6rem;
+  margin-left:1.6rem;
   font-size:25px;
 }
 
@@ -333,3 +335,535 @@ color:rgba(61, 61, 61, 0.904);
   margin-left:10px;
   font-size:20px;
 }
+
+/* ______________________________________article two___________________________ */
+
+.article-2-light-shadow{
+  width:25rem;
+  height:550px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:24.2rem;
+  margin-top: 10.3rem;
+  border-radius:5%;
+  margin-top:-34.3rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-2-light-shadow{
+    width:22.5rem;
+    height:32rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(141, 141, 141);
+    border-radius: 3%;
+    margin-left:-2rem;
+    margin-top:1.2rem;
+  }
+  
+}
+
+.article-2-picture{
+  object-fit:fill;
+  width:25rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-2-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading-2{
+  margin-top:-10px;
+  margin-left:4.6rem;
+  font-size:25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading-2{
+    margin-top:10px;
+    margin-left:0.5rem;
+  }
+  
+  }
+
+.article-title-2{
+  margin:auto;
+  margin-top:12px;
+  margin-left:12px;
+  font-size:22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width:600px){
+  .article-title-2{
+    margin:auto;
+    margin-top:12px;
+    margin-left:12px;
+    font-size:22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+.article-2-paragraph-1{
+margin-left:5px;
+color:rgba(61, 61, 61, 0.904);
+}
+
+@media screen and (max-width:600px){
+  .article-2-paragraph-1{
+    margin-left:15px;
+    position:relative;
+    color:rgba(61, 61, 61, 0.904);
+    }
+}
+
+.article-2-paragraph-2{
+  margin-left:5px;
+  color:rgba(61, 61, 61, 0.904);
+  }
+
+  @media screen and (max-width:600px){
+    .article-2-paragraph-2{
+      margin-left:15px;
+      position:relative;
+      color:rgba(61, 61, 61, 0.904);
+      }
+  }
+  
+.article-2-readmore{
+  margin-left:10px;
+  font-size:20px;
+}
+
+
+/* ______________________________________article three___________________________ */
+
+.article-3-light-shadow{
+  width:400px;
+  height:550px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:50.5rem;
+  margin-top: -34.3rem;
+  border-radius:5%;
+}
+
+@media screen and (max-width: 600px) {
+  .article-3-light-shadow{
+    width:22.5rem;
+    height:32rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(141, 141, 141);
+    border-radius: 3%;
+    margin-left:-2rem;
+    margin-top:1rem;
+  }
+  
+}
+
+.article-3-picture{
+  object-fit:fill;
+  width:28rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-3-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading-3{
+  margin-top:-10px;
+  margin-left:4.6rem;
+  font-size:25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading-3{
+    margin-top:10px;
+    margin-left:0.5rem;
+  }
+  
+  }
+
+.article-title-3{
+  margin:auto;
+  margin-top:12px;
+  margin-left:12px;
+  font-size:22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width:600px){
+  .article-title-3{
+    margin:auto;
+    margin-top:12px;
+    margin-left:12px;
+    font-size:22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+.article-3-paragraph-1{
+margin-left:5px;
+color:rgba(61, 61, 61, 0.904);
+}
+
+@media screen and (max-width:600px){
+  .article-3-paragraph-1{
+    margin-left:15px;
+    position:relative;
+    color:rgba(61, 61, 61, 0.904);
+    }
+}
+
+.article-3-paragraph-2{
+  margin-left:5px;
+  color:rgba(61, 61, 61, 0.904);
+  }
+
+  @media screen and (max-width:600px){
+    .article-3-paragraph-2{
+      margin-left:15px;
+      position:relative;
+      color:rgba(61, 61, 61, 0.904);
+      }
+  }
+  
+.article-3-readmore{
+  margin-left:10px;
+  font-size:20px;
+}
+
+
+.all-articles{
+  margin-left:1.2rem;
+}
+
+/* ______________________________________article four___________________________ */
+.article-4-light-shadow{
+  width:400px;
+  height:550px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:-2.2rem;
+  border-radius: 5%;
+}
+
+@media screen and (max-width: 600px) {
+  .article-4-light-shadow{
+    width:22.5rem;
+    height:32rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(141, 141, 141);
+    border-radius: 3%;
+    margin-left:-2rem;
+    margin-top:2rem;
+  }
+  
+}
+
+.article-4-picture{
+  object-fit:fill;
+  width:25rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-4-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading{
+  margin-top:-10px;
+  margin-left:1.6rem;
+  font-size:25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading{
+    margin-top:10px;
+    margin-left:0.5rem;
+  }
+  
+  }
+
+.article-title{
+  margin:auto;
+  margin-top:12px;
+  margin-left:12px;
+  font-size:22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width:600px){
+  .article-title{
+    margin:auto;
+    margin-top:12px;
+    margin-left:12px;
+    font-size:22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+.article-4-paragraph-1{
+margin-left:5px;
+color:rgba(61, 61, 61, 0.904);
+}
+
+@media screen and (max-width:600px){
+  .article-4-paragraph-1{
+    margin-left:15px;
+    position:relative;
+    color:rgba(61, 61, 61, 0.904);
+    }
+}
+
+.article-4-paragraph-2{
+  margin-left:5px;
+  color:rgba(61, 61, 61, 0.904);
+  }
+
+  @media screen and (max-width:600px){
+    .article-4-paragraph-2{
+      margin-left:15px;
+      position:relative;
+      color:rgba(61, 61, 61, 0.904);
+      }
+  }
+  
+.article-4-readmore{
+  margin-left:10px;
+  font-size:20px;
+}
+
+/* ______________________________________article five___________________________ */
+
+.article-5-light-shadow{
+  width:25rem;
+  height:550px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:24.2rem;
+  margin-top: 10.3rem;
+  border-radius:5%;
+  margin-top:-34.3rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-5-light-shadow{
+    width:22.5rem;
+    height:32rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(141, 141, 141);
+    border-radius: 3%;
+    margin-left:-2rem;
+    margin-top:1.2rem;
+  }
+  
+}
+
+.article-5-picture{
+  object-fit:fill;
+  width:25rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-5-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading-5{
+  margin-top:-10px;
+  margin-left:4.6rem;
+  font-size:25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading-5{
+    margin-top:10px;
+    margin-left:0.5rem;
+  }
+  
+  }
+
+.article-title-5{
+  margin:auto;
+  margin-top:12px;
+  margin-left:12px;
+  font-size:22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width:600px){
+  .article-title-5{
+    margin:auto;
+    margin-top:12px;
+    margin-left:12px;
+    font-size:22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+.article-5-paragraph-1{
+margin-left:5px;
+color:rgba(61, 61, 61, 0.904);
+}
+
+@media screen and (max-width:600px){
+  .article-5-paragraph-1{
+    margin-left:15px;
+    position:relative;
+    color:rgba(61, 61, 61, 0.904);
+    }
+}
+
+.article-5-paragraph-2{
+  margin-left:5px;
+  color:rgba(61, 61, 61, 0.904);
+  }
+
+  @media screen and (max-width:600px){
+    .article-5-paragraph-2{
+      margin-left:15px;
+      position:relative;
+      color:rgba(61, 61, 61, 0.904);
+      }
+  }
+  
+.article-5-readmore{
+  margin-left:10px;
+  font-size:20px;
+}
+
+
+/* ______________________________________article six___________________________ */
+
+.article-6-light-shadow{
+  width:400px;
+  height:550px;
+  color:#000000;
+  position:relative;
+  background-color:rgb(212, 211, 211);
+  left:40px;
+  margin-left:50.5rem;
+  margin-top: -34.3rem;
+  border-radius:5%;
+}
+
+@media screen and (max-width: 600px) {
+  .article-6-light-shadow{
+    width:22.5rem;
+    height:32rem;
+    color:#000000;
+    position:relative;
+    background-color:rgb(141, 141, 141);
+    border-radius: 3%;
+    margin-left:-2rem;
+    margin-top:1rem;
+  }
+  
+}
+
+.article-6-picture{
+  object-fit:fill;
+  width:25rem;
+}
+
+@media screen and (max-width: 600px) {
+  .article-6-picture{
+    object-fit:fill;
+    width:22.5rem;
+  }
+  
+}
+.article-heading-6{
+  margin-top:-10px;
+  margin-left:4.6rem;
+  font-size:25px;
+}
+
+
+@media screen and (max-width: 600px) {
+  .article-heading-6{
+    margin-top:10px;
+    margin-left:0.5rem;
+  }
+  
+  }
+
+.article-title-6{
+  margin:auto;
+  margin-top:12px;
+  margin-left:12px;
+  font-size:22px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+@media screen and (max-width:600px){
+  .article-title-6{
+    margin:auto;
+    margin-top:12px;
+    margin-left:12px;
+    font-size:22px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+}
+.article-3-paragraph-6{
+margin-left:5px;
+color:rgba(61, 61, 61, 0.904);
+}
+
+@media screen and (max-width:600px){
+  .article-3-paragraph-6{
+    margin-left:15px;
+    position:relative;
+    color:rgba(61, 61, 61, 0.904);
+    }
+}
+
+.article-3-paragraph-6{
+  margin-left:5px;
+  color:rgba(61, 61, 61, 0.904);
+  }
+
+  @media screen and (max-width:600px){
+    .article-3-paragraph-6{
+      margin-left:15px;
+      position:relative;
+      color:rgba(61, 61, 61, 0.904);
+      }
+  }
+  
+.article-6-readmore{
+  margin-left:10px;
+  font-size:20px;
+}
+
+
+.bottom-articles{
+  margin-left:-53rem;
+  margin-top:5rem;
+}
+
+@media screen and (max-width:600px){
+  @media screen and (max-width:600px){
+    .bottom-articles{
+      display:none;
+    }
+  }
+}
+/* -------------------------------footer------------------------------ */
