--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Add a black background color to the top navigation */
 * {
   box-sizing: border-box;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .topnav {
@@ -204,7 +204,7 @@
     font-family: 'Roboto', sans-serif;
     margin-left:1rem;
     font-size:20px;
-    margin-top:-3.5rem;
+    margin-top:-1.5rem;
     padding:25px;
     
   }
@@ -1292,4 +1292,109 @@ textarea {
 
 .footer-gap{
   height:40rem;
+}
+
+.flex-gap{
+  height:-1rem;
+}
+
+.values{
+  left:3rem;
+  position:relative;
+  font-size: 35px;
+}
+
+
+/* ___________________________flex_______items_______ */
+
+.flex-margin {
+  margin: 1rem;
+}
+
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+  
+
+}
+@media (max-width: 560px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    text-align: center;
+    margin-top:34rem;
+
+  }
+}
+.flex-item-left {
+  background-color: #ffffff;
+  flex: 30%;
+  font-size: 17px;
+  padding:30px;
+
+}
+
+
+@media (max-width: 560px) {
+  .flex-item-left {
+    background-color: #ffffff;
+   
+    flex: 25%;
+    font-size: 17px;
+  }
+}
+.flex-item-left img {
+  background-color: #ffffff;
+  padding: 15px;
+  flex: 25%;
+width:5rem;
+}
+
+.flex-item-right {
+  background-color: rgb(255, 255, 255);
+  font-size: 17px;
+  flex: 30%;
+  margin-top:1.1rem;
+  padding:30px;
+  
+}
+
+@media (max-width: 560px) {
+ 
+.flex-item-right {
+  background-color: rgb(255, 255, 255);
+  flex: 25%;
+}
+}
+@media (max-width: 560px) {
+  .flex-item-right img {
+    background-color: #ffffff;
+    padding: 15px;
+    flex: 25%;
+    width:5rem;
+  }
+}
+/* Responsive layout - makes a one column-layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .flex-item-right,
+  .flex-item-left {
+    flex: 100%;
+  }
+}
+
+/* @media (max-width: 800px) {
+  .height {
+    height: 10rem;
+  }
+} */
+
+
+.u {
+  text-underline-position: under;
+  padding-bottom: 3px;
+  text-decoration: underline rgb(182, 10, 10);
 }
