--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   font-family: 'Roboto', sans-serif;
 }
 
+
 .topnav {
   background-color: hsl(0, 0%, 100%);
   overflow: visible;
@@ -77,17 +78,20 @@
 .topnav a:hover {
   background-color: #e2e2e2d8;
   color: black;
+  
 }
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
   background-color: #e2e2e2;
   color: rgb(0, 0, 0);
+  
 }
 
 /* Hide the burger icon that should open and close the topnav on small screens */
 .topnav .icon {
   display: none;
+  
 
 
 }
@@ -101,22 +105,23 @@
     float: right;
     display: block;
     margin-right: 1rem;
-    
-   
-
   }
+ 
 }
+
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .topnav.responsive {
     position: relative;
+    
   }
 
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
     top: 5px;
+   
 
 
   }
@@ -128,6 +133,11 @@
     margin-top: 1rem;
 
   }
+  .topnav a.active {
+    background-color: #e2e2e2;
+    color: rgb(0, 0, 0); 
+  }
+
 }
 
 
@@ -173,6 +183,14 @@
   transform: scaleX(1);
   transform-origin: bottom left;
 }
+
+@media screen and (max-width: 600px) {
+ .disabled{
+  pointer-events: none;
+  opacity: 0.3;
+ }
+}
+
 /*  mission statement_____________________________________________________________________ */
 .mission-statement-shadow{
   background-color: #e6e3e3;
@@ -471,7 +489,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(236, 229, 229);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: -73rem;
@@ -602,7 +620,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(224, 223, 223);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: 1.2rem;
@@ -710,7 +728,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(214, 212, 212);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: 1rem;
@@ -768,27 +786,27 @@ img {
 
 .article-3-paragraph-1 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color: rgba(34, 34, 34, 0.904);
 }
 
 @media screen and (max-width:600px) {
   .article-3-paragraph-1 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color: rgba(32, 32, 32, 0.904);
   }
 }
 
 .article-3-paragraph-2 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color: rgba(32, 32, 32, 0.904);
 }
 
 @media screen and (max-width:600px) {
   .article-3-paragraph-2 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color:rgba(32, 32, 32, 0.904);
   }
 }
 
@@ -820,7 +838,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(218, 218, 218);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: 2rem;
@@ -928,7 +946,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(206, 206, 206);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: 1.2rem;
@@ -986,27 +1004,27 @@ img {
 
 .article-5-paragraph-1 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color:rgba(32, 32, 32, 0.904);;
 }
 
 @media screen and (max-width:600px) {
   .article-5-paragraph-1 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color: rgba(32, 32, 32, 0.904);;
   }
 }
 
 .article-5-paragraph-2 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color: rgba(32, 32, 32, 0.904);;
 }
 
 @media screen and (max-width:600px) {
   .article-5-paragraph-2 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color: rgba(32, 32, 32, 0.904);;
   }
 }
 
@@ -1036,7 +1054,7 @@ img {
     height: 32rem;
     color: #000000;
     position: relative;
-    background-color: rgb(141, 141, 141);
+    background-color: rgb(226, 226, 226);
     border-radius: 3%;
     margin-left: -2rem;
     margin-top: 1rem;
@@ -1094,27 +1112,27 @@ img {
 
 .article-3-paragraph-6 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color:rgba(32, 32, 32, 0.904);;
 }
 
 @media screen and (max-width:600px) {
   .article-3-paragraph-6 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color:rgba(32, 32, 32, 0.904);;
   }
 }
 
 .article-3-paragraph-6 {
   margin-left: 5px;
-  color: rgba(61, 61, 61, 0.904);
+  color: rgba(32, 32, 32, 0.904);;
 }
 
 @media screen and (max-width:600px) {
   .article-3-paragraph-6 {
     margin-left: 15px;
     position: relative;
-    color: rgba(61, 61, 61, 0.904);
+    color: rgba(32, 32, 32, 0.904);;
   }
 }
 
@@ -1149,7 +1167,7 @@ footer {
   left: 0;
   background: #292929;
   height:35rem;
-  margin-top:38rem;
+  margin-top:2rem;
 }
 
 @media screen and (max-width:600px) {
@@ -1311,9 +1329,15 @@ textarea {
 
 
 .footer-gap{
-  height:-50rem;
+  height:35rem;
 }
 
+@media (max-width: 900px) {
+  .footer-gap{
+    height:1rem;
+  }
+  
+}
 .flex-gap{
   height:-1rem;
 }
@@ -1450,7 +1474,7 @@ width:5rem;
 }
 
 
-.food-donations{
+.food-donations-img{
   width:50rem;
   margin-top:7rem;
 }
@@ -1463,29 +1487,133 @@ width:5rem;
 }
 
 
+@media (max-width: 900px) {
+  .food-donations-color{
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(223, 9, 9));
+    position:relative;
+    width:100%;
+    height:28.3rem;
+  }
+  
+} 
+@media (max-width: 900px) {
+  .food-donations-img{
+    width:100%;
+    margin-top:0rem;
+  }
+} 
+
 .article-main-heading{
-   font-size: 48px;
+   font-size: 44px;
    z-index: 9;
    background-color: white;
    word-wrap: break-word;
-   width: 444px;
-border-radius: 5%;
-   position: relative;
+   width: 150px;
+   border-radius: 5%;
+   position: absolute;
    margin-left: 2rem;
    font-weight: 700;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   margin-top: 18.5rem;
 }
-
+@media (max-width: 900px) {
+  .article-main-heading{
+    font-size: 44px;
+    z-index: 9;
+    background-color: white;
+    word-wrap: break-word;
+    width: 120px;
+    border-radius: 5%;
+    position: absolute;
+    margin-left: -22.5rem;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top:14rem;
+ }
+} 
 .article-main-heading-2{
   font-size: 40px;
   z-index: 9;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   word-wrap: break-word;
-  width: 272px;
+  width: 270px;
   border-radius: 5%;
   position: absolute;
-  margin-left: -17rem;
-  margin-top:21.1rem;
+  margin-left:-5.5rem;
+  margin-top:11.1rem;
   font-weight: 700;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top:22rem;
 }
+
+
+@media (max-width: 900px) {
+  .article-main-heading-2{
+    font-size: 40px;
+    z-index: 9;
+    background-color: white;
+    word-wrap: break-word;
+    width: 230px;
+    border-radius: 5%;
+    position: absolute;
+    margin-left: -22.5rem;
+    margin-top:17.1rem;
+    font-weight: 700;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top:17rem;
+  }
+  
+} 
+
+
+.article-content{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 400;
+  width:800px;
+  font-size: 19px;
+  position: relative;
+  margin-left: 3rem;
+  margin-top:3rem;
+  padding:10px 20px;
+}
+
+
+
+@media (max-width: 900px) {
+  .article-content{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+    width:370px;
+    font-size: 19px;
+    position: relative;
+    margin-left:1px;
+    margin-top:12rem;
+    padding:10px 10px 10px;
+  }
+  
+}
+
+.also-in-this-section{
+  margin-top:45rem;
+}
+
+
+
+
+@media (max-width: 900px) {
+ 
+.also-in-this-section{
+  margin-top:152rem;
+}
+}
+
+
+@media (max-width: 900px) {
+ 
+  .also-in-this-section h2{
+    margin-top:-3rem;
+    font-size: 30px;
+    position: absolute;
+    margin-left:1rem;
+  }
+  }
